# snestistics

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
data/: hardware_reg.labels  test.nut
docs/: .buildinfo  .nojekyll  _config.yml  about.md  genindex.html  history.md  index.html  index.md  objects.inv  searchindex.js  tutorial-1.html  tutorial-1.md  tutorial-2.html  tutorial-2.md  tutorial-3.md  tutorial-annotations.md  tutorial-auto.md  tutorial-css-test.md  tutorial-first-asm.md  tutorial-future.md  tutorial-intro.md  tutorial-predict.md  tutorial-re1.md  tutorial-re2.md  tutorial.md  user-guide-test.md  user-guide.html  user-guide.md
docs/_includes/: generated-cmd-annotation.html  generated-cmd-asm.html  generated-cmd-predict.html  generated-cmd-rewind.html  generated-cmd-rom.html  generated-cmd-scripting.html  generated-cmd-trace.html  generated-cmd-tracelog.html  generated-command-line-reference.html
docs/_layouts/: default.html  markdeep_api.html  markdeep_default.html
docs/_sources/: index.rst.txt
docs/assets/css/: style.scss
docs/code/: tutorial-annotations.labels  tutorial-predict.labels  tutorial2.labels
docs/html/: search.html  searchindex.js
docs/html/_sources/userguide/: index.rst.txt
docs/user-guide/: .buildinfo  .nojekyll  command-line-options.md  command_line_options.html  genindex.html  index.html  index.md  objects.inv  scripting.md  scripting_api.html  search.html  searchindex.js
docs/user-guide/api/: replay.html  replay.md  report-writer.md  report_writer.html  trace_log.html
docs/user-guide/userguide/: command_line_options.html  index.html  scripting_api.html
docs/user-guide/userguide/api/: replay.html  report_writer.html  trace_log.html
docs/userguide/: index.html  scripting_api.html
docs/userguide/api/: trace_log.html
docs_source/: make.bat  make_permanent.bat
docs_source/source/: command_line_options.rst  conf.py  index.rst
docs_source/source/api/: trace_log.rst
docs_source/source/userguide/: index.rst  scripting_api.rst
docs_source/source/userguide/api/: replay.rst  report_writer.rst
examples/zelda3-ntsc/: .gitignore  cmdline  header.def  labels.def  zelda3.link  zelda3.snestistics  zelda3.snestrace
snesinfo/: asminclude.py  registers.csv  registers.inc  snestisticsgen.py
source/: CMakeLists.txt  annotationresolver.cpp  annotationresolver.h  annotations.cpp  annotations.h  api.h  asm_writer.cpp  asm_writer.h  asmwrite_wladx.h  auto_annotate.cpp  auto_annotate.h  cmdoptions.h  cputable.cpp  cputable.h  emulate.cpp  emulate.h  emulate_replay.h  instruction_tables.cpp  instruction_tables.h  instruction_tables_generate.py  optables.json  optables_generate.py  options.cpp  options.h  predict.cpp  predict.h  registergen.h  replay.cpp  replay.h  report_writer.cpp  report_writer.h  rewind.cpp  rewind.h  rom_accessor.h  romaccessor.h  scripting.cpp  scripting.h  snesops.h  snestistics.cpp  state_compression.cpp  (+11 more)
source/emulate_generate/: commalist.py  generate_cpp.py  generate_json.py  operands.py  operands_generator.py  optab.json  optables.h  table.txt
testdata/: sfw_tracelog.nut  trace_log_test.nut
tests/: CMakeLists.txt
tests/state_compression_test/: CMakeLists.txt  state_compression_test.cpp
utilities/: command-line-parsing.py
